2009-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* base/README.txt: Updated.

2009-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	According to CR #38 (http://www.openvas.org/openvas-cr-38.html) to
	reorganize openvas-libraries, this step prepares the "base" lib.

	* libopenvascommon: rename to "base".

	* base: The former directory "libopenvascommon".

	* Makefile, libopenvas/Makefile: replace all occurances of
	path "libopenvascommon" by "base".

	* MANIFEST: Updated.

2009-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>

	* libopenvas/resolve.c: Removed definition of __u32 because
	it is not used anyway.
	Removed code that is deactivated since ever anyway.

2009-07-27  Felix Wolfsteller <felix.wolfsteller@intevation.de>

	* packaging/debian/control,
	packaging/debian/libopenvas2-dev.dirs,
	packaging/debian/compat,
	packaging/debian/libopenvas2.dirs,
	packaging/debian/libopenvas2-dev.install,
	packaging/debian/watch,
	packaging/debian/changelog,
	packaging/debian/patches/configure-grypt.dpatch,
	packaging/debian/patches/00list,
	packaging/debian/copyright,
	packaging/debian/libopenvas2.install,
	packaging/debian/rules:
	Removed.
	Was moved to /openvas-packaging/openvas-libraries/debian/trunk.

2009-07-27 Jan Wagner <Waja@cyconet.org>

	* packaging/debian/changelog, packaging/debian/control,
	packaging/debian/watch, packaging/debian/patches
	packaging/debian/patches/configure-grypt.dpatch
	packaging/debian/patches/00list, packaging/debian/copyright
	packaging/debian/rules:

	- relicense packaging to GPL-3
	- New upstream release
	- add configure-grypt.dpatch to get grypt working well
	- fixing DESTDIR in rules
	- Add debian/watch to detect when a new version is available at
	  wald.intevation.org
	- Bump Standards-Version to 3.8.2, no changes needed

2009-07-27  Laban Mwangi <lmwangi@penguinlabs.co.ke>

	* libopenvas/openvas_logging.c, libopenvas/openvas_logging.h:
	Consistency in variable names.
