@@ -1,3 +1,10 @@
+2009-08-12  Laban Mwangi <lmwangi@penguinlabs.co.ke>
+
+	* libopenvas/openvas_logging.c, libopenvas/openvas_logging.h:
+	Added support for the default group and tidying of comments.
+	Fixed setup_log_handlers to load log domains from the configuration
+	file.
+
 2009-08-12  Jan-Oliver Wagner <jan-oliver.wagner@greenbone.net>
 
 	* base/README.txt: Updated.
